# simsuite_c

./: CMakeLists.txt  README.md
data/: test.csv
include/: init.h  integrators.h  simulate.h  systems.h  tools.h
src/: init.c  integrators.c  integrators.h  main.c  simulate.c  systems.c  systems.h
src/integrators/: CMakeLists.txt  euler_step.c  eulerv1.c  eulerv2.c  integrators.c  leapfrog.c  midpoint.c  rk4.c  velocity_verlet.c  verlet.c
src/simulate/: CMakeLists.txt  simulate.c
src/systems/: CMakeLists.txt  damped_harmonic_oscillator.c  double_pendulum.c  driven_pendulum.c  harmonic_oscillator.c  inverted_pendulum.c  mass_spring_damper.c  pendulum.c  spring_coupled.c  systems.c  van_der_pol.c
src/tools/: CMakeLists.txt  tool.c
